# antimony_bootstrap

./: .gitignore  .mcp.json.example  CLAUDE.md  README.md  justfile  pyproject.toml
.claude/skills/build-module/: SKILL.md
.claude/skills/parameterize/: SKILL.md
models/alzheimers/: manifest.yaml  model.yaml
plan/: PLAN.md
plan/attic/: batch_0_findings.md  batch_10_findings.md  batch_11_findings.md  batch_12_findings.md  batch_13_findings.md  batch_14_findings.md  batch_16_findings.md  batch_17_findings.md  batch_18_findings.md  batch_19_findings.md  batch_1_findings.md  batch_21_findings.md  batch_22_findings.md  batch_23_findings.md  batch_24_findings.md  batch_25_findings.md  batch_26_findings.md  batch_27_findings.md  batch_28_findings.md  batch_29_findings.md  batch_2_findings.md  batch_30_findings.md  batch_31_findings.md  batch_34_findings.md  batch_35_findings.md  batch_36_findings.md  batch_37_findings.md  batch_38_findings.md  batch_39_findings.md  batch_3_findings.md  batch_4_findings.md  batch_5_findings.md  batch_6_findings.md  batch_8_findings.md  batch_9_findings.md  strategy_amyloid_cascade.md  strategy_existing_models.md  strategy_lipid_apoe.md  strategy_module_decomposition.md  strategy_neuroinflammation.md  (+5 more)
scripts/: consolidate_parameters.py  internal_module_consistency_check.py  validate_module_internal.py
scripts/supplement/: Supplement_ODE_Triage.docx  generate_supplement_docx.py
src/antimony_bootstrap/: __init__.py  cli.py
tests/: test_assembly.py  test_composer.py  test_dismech.py  test_modules.py  test_schema.py
(+94 files in other folders)
